<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/website_editText_hint"/>

    <Button
        android:id="@+id/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_website"
        android:onClick="openWebsite"/>

    <EditText
        android:id="@+id/location_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"/>

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_location"
        android:onClick="openLocation"/>

    <EditText
        android:id="@+id/share_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/share_text"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_this_text"
        android:onClick="shareText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_a_picture"
        android:onClick="takePicture"/>

</LinearLayout>